@@ -7,8 +7,6 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-- New: Put CD player / xmms modules in contrib/ ...
-
 - Mouse support in menu
 
 - Show config -> list and display documentation for all tweakable global variables. [Philippe]
