@@ -1,5 +1,7 @@
 2009-06-29  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* contrib/cd-player.lisp: New file to handle the CD player.
+
 	* contrib/xmms.lisp: New file to handle the xmms player.
 
 2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>
